<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_new_coll_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_20">

    <View
        android:id="@+id/drag_handle"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_drag_handle" />

    <TextView
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/create_new_coll"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_18" />

    <com.example.gourmetcompass.utils.EditTextUtil
        android:id="@+id/btms_coll_name_my_colls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_30" />

    <TextView
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:text="@string/type"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_18" />

    <RadioGroup
        android:id="@+id/radio_group_my_colls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_5">


        <RadioButton
            android:id="@+id/radio_restaurant"
            style="@style/TextFont"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/margin_50"
            android:buttonTint="@color/button_orange"
            android:paddingHorizontal="@dimen/padding_5"
            android:text="Restaurant"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_18"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/radio_dish"
            style="@style/TextFont"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:buttonTint="@color/button_orange"
            android:paddingHorizontal="@dimen/padding_5"
            android:text="Dish"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_18"
            tools:ignore="HardcodedText" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_done_my_colls"
        style="@style/TitleFont"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_30"
        android:background="@drawable/btn_orange"
        android:elevation="5dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18" />

</LinearLayout>
