...
    <string name="add_a_review">Add a review</string>
    <string name="rate_this_dish">Rate this dish</string>
    <string name="create_new_coll">Create a new collection</string>
    <string name="my_collection">My collection #%1$d</string>
    <string name="submit">Submit</string>
    <string name="new_collection">New collection</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="rate_this_restaurant">Rate this restaurant</string>
    <string name="favorites_restaurants">Favorites Restaurants</string>
    <string name="reply_review">Replying to %1$s</string>
    <string name="description">Description</string>
...
    <string name="older_wiser">The older, the wiser</string>
    <string name="top_reviewed">Top reviewed</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="gourmet_s_choice">Gourmet\'s choice</string>
    <string name="search">Search</string>
    <string name="go_to_search_view">Go to search view</string>
    <string name="recent_searches">Recent searches</string>
    <string name="popular_searches">Popular searches</string>
    <string name="recommended">Recommended</string>
    <string name="guest">Guest</string>
    <string name="personal_information">Personal Information</string>
    <string name="my_collections">My Collections</string>
    <string name="my_reviews">My Reviews</string>
    <string name="change_password">Change Password</string>
    <string name="request_edit">Request to add/edit a restaurant</string>
    <string name="log_out">Log Out</string>
    <string name="back_to_previous_page">Back to previous page</string>
    <string name="highest_rated">Highest Rated</string>
...
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="account_ava">Account ava</string>
    <string name="type">Type</string>
    <string name="n_results">%1$d results</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="user_avatar">User avatar</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_library">Photo Library</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="empty">Empty</string>
    <string name="add_your_first_collection">Add your first collection!</string>
...
    <string name="no_reviews">You have no reviews for now</string>
    <string name="add_some_items">Add some items here</string>
    <string name="add_some_reviews">Write your first review</string>
    <string name="ratings_title">Ratings (%.1f/5.0)</string>
    <string name="ratings_title_na">Ratings (N/A)</string>
    <string name="first_to_review">Be the first person to write a review</string>
    <string name="rename_collection">Rename collection</string>
    <string name="delete_collection">Delete collection</string>
    <string name="top_categories">Top categories</string>
    <string name="_1_result">1 result</string>
    <string name="empty_search">No results</string>
    <string name="noti_description">noti_description</string>
    <string name="show_replies">Show all replies</string>
    <string name="edit_review">Edit review</string>
...
