<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btms_rename_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_20">

    <View
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_drag_handle" />

    <TextView
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/rename_collection"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_18" />

    <com.example.gourmetcompass.utils.EditTextUtil
        android:id="@+id/btms_rename_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_30" />

    <Button
        android:id="@+id/btms_rename_btn_done"
        style="@style/TitleFont"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_30"
        android:background="@drawable/btn_orange"
        android:elevation="5dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18" />

</LinearLayout>