...
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Email:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/email_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
...
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Password:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/password_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
...
        android:layout_marginEnd="30dp"
        android:text="Forgot password?"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18" />

    <Button
        android:id="@+id/btn_log_in_mid"
        style="@style/TitleFont"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="70dp"
...
